Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107598

HorizontalHeaderView crashes the app if it's synced to model changed from bg thread

XMLWordPrintable

    • ccda33624 (dev), 71122209f (6.6), 6b598238a (6.5), 4028faa28 (tqtc/lts-6.2), 4ccb4e259 (tqtc/lts-5.15)

      An app crash happens when you try to modfy table model from backgroun thread while having a HorizontalHeaderView synced to it. 
      For the demo please run https://github.com/mchistovib/brokenQMLThrAffCPP 
      As you can see, when pressing "add rows other thread", app crashes, however if you just comment out "syncView: tableView" line, it runs fine and succesfully adds rows to the table.

      I am sure that this is a qt bug in HorizontalHeaderView, otherwise it would also happen with model that has no synced header

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            maximchistov Maksim Chistov
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes