Doc: state that models are not thread-safe

Fixes: QTBUG-107598
Pick-to: 5.15
Change-Id: I0e7ea8d4b2094d92b3cad5eec5b30e6e3ac64018
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit ccda3362464bfaff999b739aa81925c7b51075a9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 71122209f4590a3d760f56fc8d013ef4d0b95719)
(cherry picked from commit 6b598238a9573362bcaeb656a3e4295c4d33fe54)